[gd_scene load_steps=2 format=3 uid="uid://lxegvbmefxec"]

[ext_resource type="Script" path="res://barkley2/scripts/CC/gender_warning_bg.gd" id="1_m1e2v"]

[node name="gender_warning_bg" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.078, 0, 0.078, 0.8)
script = ExtResource("1_m1e2v")

[node name="warning_text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = -19.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="accept_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="deny_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
